--- a/kontakt.html
+++ b/kontakt.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Min första fina hemsida</h1>
-    <a href="kontakt.html">Kontakta oss</a>
+    <h1>Kontakta oss</h1>
 </body>
 </html>
